--- a/.github/workflows/pullrequestforrelease.yml
+++ b/.github/workflows/pullrequestforrelease.yml
@@ -30,4 +30,4 @@ jobs:
           pr_body: ":crown: *An automated PR*"              # Full markdown support, requires pr_title to be set
           pr_template: ".github/pull_request_template.md"   # Path to pull request template, requires pr_title to be set, excludes pr_body                         
           pr_allow_empty: true
-          github_token: ${{ secrets.OneView_Python }}
+          github_token: ${{ secrets.PAT_TOKEN }}
