--- a/.github/workflows/pullrequestforrelease.yml
+++ b/.github/workflows/pullrequestforrelease.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Debug information
         run: |
           echo "Current directory: $(pwd)"
-          echo "GitHub Token: ${{ secrets.GITHUB_TOKEN }}"
+          echo "GitHub Token: ${{ secrets.PAT_TOKEN }}"
           echo "Source Branch: ${{ github.ref }}"
           echo "Destination Branch: master"
 
@@ -25,7 +25,7 @@ jobs:
           source_branch: "PR"                                 # If blank, default: triggered branch
           destination_branch: "master" # If blank, default: master
           pr_label: "automation" 
-          pr_title: "Testing automation" # Title of pull request
+          pr_title: "OV8.4 Validation" # Title of pull request
 #         pr_reviewer: "nabhajit-ray,AvijitOS"
           pr_body: ":crown: *An automated PR*"              # Full markdown support, requires pr_title to be set
           pr_template: ".github/pull_request_template.md"   # Path to pull request template, requires pr_title to be set, excludes pr_body                         
