--- a/.github/workflows/createtagandrelease.yml
+++ b/.github/workflows/createtagandrelease.yml
@@ -15,7 +15,7 @@ jobs:
         id: tag_and_prepare_release
         uses: anothrNick/github-tag-action@1.64.0
         env:
-          GITHUB_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN:  ${{ secrets.PAT_TOKEN }}
           WITH_V: true
           CUSTOM_TAG: "v8.4.0"
       - name: Display
@@ -26,4 +26,36 @@ jobs:
           name:  ${{ steps.tag_and_prepare_release.outputs.new_tag }}
           tag: ${{ steps.tag_and_prepare_release.outputs.new_tag }}
           body: See the <a href="https://github.com/akshith-gunasheelan/oneview-golang/blob/master/CHANGELOG.md">CHANGELOG.md</a> for details.
-          token:  ${{secrets.GITHUB_TOKEN}} 
+          token:  ${{secrets.PAT_TOKEN}} 
+          
+
+# jobs:
+#   release:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Create Draft Release
+#       id: create_release
+#       uses: actions/create-release@v1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#         tag_name: <tofill>
+#         release_name: <tofill>
+#         draft: true
+#         prerelease: false
+
+#     - uses: actions/upload-release-asset@v1.0.1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#         upload_url: ${{ steps.create_release.outputs.upload_url }}
+#         asset_path: ./my-artifact.zip
+#         asset_name: my-artifact.zip
+#         asset_content_type: application/zip
+
+#     - uses: eregon/publish-release@v1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#         release_id: ${{ steps.create_release.outputs.id }}
+
