--- a/.github/workflows/pullrequestforrelease.yml
+++ b/.github/workflows/pullrequestforrelease.yml
@@ -3,7 +3,7 @@ name: Raise a Pull Request
 on:
   push:
     branches:
-      - "PR"  # Support wildcard matching
+      - "OV[0-9].[0-9]_Validation"  # Support wildcard matching
 
 jobs:
   pull-request:
@@ -22,10 +22,10 @@ jobs:
       - name: Raise pull request
         uses: repo-sync/pull-request@v2
         with:
-          source_branch: "PR"                                 # If blank, default: triggered branch
+          source_branch: "${{ github.ref }}"                                 # If blank, default: triggered branch
           destination_branch: "master" # If blank, default: master
           pr_label: "automation" 
-          pr_title: "OV8.4 Validation" # Title of pull request
+          pr_title: "${{ github.ref }}" # Title of pull request
 #         pr_reviewer: "nabhajit-ray,AvijitOS"
           pr_body: ":crown: *An automated PR*"              # Full markdown support, requires pr_title to be set
           pr_template: ".github/pull_request_template.md"   # Path to pull request template, requires pr_title to be set, excludes pr_body                         
