--- a/.github/workflows/pullrequestforrelease.yml
+++ b/.github/workflows/pullrequestforrelease.yml
@@ -3,7 +3,7 @@ name: Raise a Pull Request
 on:
   push:
     branches:
-      - "OV[0-9]*"  # Support wildcard matching
+      - "OV*"  # Support wildcard matching
 
 jobs:
   pull-request:
