--- a/.github/workflows/pullrequestforrelease.yml
+++ b/.github/workflows/pullrequestforrelease.yml
@@ -3,7 +3,7 @@ name: Raise a Pull Request
 on:
   push:
     branches:
-      - "*OV"  # Support wildcard matching
+      - "OV8.4_Validation"  # Support wildcard matching
 
 jobs:
   pull-request:
