--- a/.github/workflows/pullrequestforrelease.yml
+++ b/.github/workflows/pullrequestforrelease.yml
@@ -3,7 +3,7 @@ name: Raise a Pull Request
 on:
   push:
     branches:
-      - "OV8.4_Validation"  # Support wildcard matching
+      - "OV*_Validation"  # Match branches that start with "OV" and end with "_Validation"
 
 jobs:
   pull-request:
@@ -19,14 +19,19 @@ jobs:
           echo "Source Branch: ${{ github.ref }}"
           echo "Destination Branch: master"
 
+      - name: Determine branch name
+        id: branch
+        run: |
+          branch_name=$(echo "${{ github.ref }}" | sed -n 's/refs\/heads\/\(.*\)/\1/p')
+          echo "::set-output name=branch_name::$branch_name"
+
       - name: Raise pull request
         uses: repo-sync/pull-request@v2
         with:
           source_branch: "${{ github.ref }}"                                 # If blank, default: triggered branch
           destination_branch: "master" # If blank, default: master
           pr_label: "automation" 
-          pr_title: "${{ github.ref }}" # Title of pull request
-#         pr_reviewer: "nabhajit-ray,AvijitOS"
+          pr_title: "OV${{ steps.branch.outputs.branch_name }} Validation"  # Construct the pull request title without "refs/heads/"
           pr_body: ":crown: *An automated PR*"              # Full markdown support, requires pr_title to be set
           pr_template: ".github/pull_request_template.md"   # Path to pull request template, requires pr_title to be set, excludes pr_body                         
           pr_allow_empty: true
