--- a/.github/workflows/pullrequestforrelease.yml
+++ b/.github/workflows/pullrequestforrelease.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Determine branch name
         id: branch
         run: |
-          branch_name=$(echo "${{ github.ref }}" | sed -n 's/refs\/heads\/\(.*\)/\1/p')
+          branch_name=$(echo "${{ github.ref }}" | sed -n 's/refs\/heads\/OV\(.*\)_Validation/\1/p')
           echo "::set-output name=branch_name::$branch_name"
 
       - name: Raise pull request
@@ -31,7 +31,7 @@ jobs:
           source_branch: "${{ github.ref }}"                                 # If blank, default: triggered branch
           destination_branch: "master" # If blank, default: master
           pr_label: "automation" 
-          pr_title: "OV${{ steps.branch.outputs.branch_name }} Validation"  # Construct the pull request title without "refs/heads/"
+          pr_title: "OV${{ steps.branch.outputs.branch_name }} Validation"  # Construct the pull request title without "refs/heads/" and only using the extracted branch name
           pr_body: ":crown: *An automated PR*"              # Full markdown support, requires pr_title to be set
           pr_template: ".github/pull_request_template.md"   # Path to pull request template, requires pr_title to be set, excludes pr_body                         
           pr_allow_empty: true
