--- a/.github/workflows/pullrequestforrelease.yml
+++ b/.github/workflows/pullrequestforrelease.yml
@@ -33,7 +33,7 @@ jobs:
           pr_label: "automation" 
           pr_title: "OV${{ steps.branch.outputs.branch_name }} Validation"  # Construct the pull request title without "refs/heads/" and only using the extracted branch name
           pr_body: ":crown: *An automated PR*"              # Full markdown support, requires pr_title to be set
-          pr_reviewer: "nabhajit-ray,AvijitOS"
+#           pr_reviewer: "nabhajit-ray,AvijitOS"
           pr_template: ".github/pull_request_template.md"   # Path to pull request template, requires pr_title to be set, excludes pr_body                         
           pr_allow_empty: true
           github_token: ${{ secrets.PAT_TOKEN }}
